# wadge

./: .gitignore  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  build.go  build.rs  build_dev.go  flake.nix  gen.go  gen_dev.go  go.mod  go.sum  go.work  go.work.sum  rust-toolchain.toml  wadge.go  wasm.go  west.go  west_android_arm64.go  west_darwin_amd64.go  west_darwin_arm64.go  west_linux_amd64.go  west_linux_arm64.go  west_linux_riscv64.go  west_windows_amd64.go  west_windows_arm64.go
.github/: dependabot.yml
.github/actions/install-nix/: action.yml
.github/workflows/: nix.yml  scorecard.yml  update.yml  wadge.yml  west.yml
bindings/: bindings.go  wadge.go  west.go
bindings/wadge/wadge/imports/: imports.wit  imports.wit.go
bindings/wadge/wadge/importsx/: importsx.wit.go
bindings/wasi/cli/environment/: environment.wasm.go  environment.wit.go
bindings/wasi/cli/imports/: imports.wit  imports.wit.go
bindings/wasi/cli/stderr/: stderr.wit.go
bindings/wasi/cli/stdin/: stdin.wasm.go  stdin.wit.go
bindings/wasi/cli/stdout/: stdout.wit.go
bindings/wasi/cli/terminal-input/: terminal-input.wit.go  terminalinput.wasm.go
bindings/wasi/cli/terminal-output/: terminal-output.wit.go  terminaloutput.wasm.go
bindings/wasi/cli/terminal-stderr/: terminal-stderr.wit.go  terminalstderr.wasm.go
bindings/wasi/cli/terminal-stdin/: terminal-stdin.wit.go
bindings/wasi/cli/terminal-stdout/: terminal-stdout.wit.go
bindings/wasi/clocks/imports/: imports.wit  imports.wit.go
bindings/wasi/clocks/monotonic-clock/: monotonic-clock.wit.go
bindings/wasi/clocks/timezone/: abi.go  timezone.wasm.go  timezone.wit.go
bindings/wasi/clocks/wall-clock/: wall-clock.wit.go
bindings/wasi/filesystem/imports/: imports.wit  imports.wit.go
bindings/wasi/filesystem/preopens/: preopens.wasm.go  preopens.wit.go
bindings/wasi/filesystem/types/: abi.go  types.wit.go
bindings/wasi/http/imports/: imports.wit  imports.wit.go
bindings/wasi/http/outgoing-handler/: abi.go  outgoing-handler.wit.go  outgoinghandler.wasm.go
bindings/wasi/http/types/: abi.go  types.wasm.go  types.wit.go
bindings/wasi/io/imports/: imports.wit
bindings/wasi/io/poll/: poll.wit.go
bindings/wasi/io/streams/: streams.wasm.go  streams.wit.go
bindings/wasi/logging/imports/: imports.wit  imports.wit.go
bindings/wasi/logging/logging/: logging.wit.go
bindings/wasi/random/imports/: imports.wit  imports.wit.go
bindings/wasi/random/insecure/: insecure.wasm.go  insecure.wit.go
bindings/wasi/random/insecure-seed/: insecure-seed.wit.go
bindings/wasi/random/random/: random.wit.go
bindings/wasi/sockets/imports/: imports.wit  imports.wit.go
bindings/wasi/sockets/instance-network/: instance-network.wit.go  instancenetwork.wasm.go
bindings/wasi/sockets/ip-name-lookup/: abi.go  ip-name-lookup.wit.go  ipnamelookup.wasm.go
bindings/wasi/sockets/network/: network.wit.go
bindings/wasi/sockets/tcp/: abi.go  tcp.wasm.go  tcp.wit.go
bindings/wasi/sockets/tcp-create-socket/: tcp-create-socket.wit.go  tcpcreatesocket.wasm.go
bindings/wasi/sockets/udp/: abi.go  udp.wasm.go  udp.wit.go
bindings/wasi/sockets/udp-create-socket/: udp-create-socket.wit.go  udpcreatesocket.wasm.go
bindings/wasiext/http/ext/: ext.wasm.go  ext.wit.go
bindings/wasiext/http/imports/: imports.wit  imports.wit.go
bindings/west/test/http-test/: http-test.wit.go
bindings/west/test/imports/: imports.wit.go
bindings/west/west/imports/: imports.wit.go
ci/: release.sh
cmd/wadge-bindgen-go/: main.go
cmd/west-bindgen-go/: main.go
crates/generate-header/: Cargo.toml
crates/generate-header/src/: main.rs
crates/passthrough/: Cargo.toml
crates/passthrough/src/: bindings.rs  cli.rs  clocks.rs  filesystem.rs  http.rs  io.rs  lib.rs  sockets.rs  west.rs
crates/sys/: Cargo.toml  build.rs  west.h
crates/sys/src/: ffi.rs  lib.rs
crates/wadge/: Cargo.toml
crates/wadge-passthrough/: Cargo.toml
crates/wadge-passthrough/src/: lib.rs
crates/wadge-sys/: Cargo.toml
crates/wadge-sys/src/: lib.rs
crates/wadge/src/: lib.rs
crates/west/: Cargo.toml  build.rs
crates/west-sys/: Cargo.toml  build.rs
crates/west-sys/src/: ffi.rs  lib.rs
crates/west/src/: lib.rs
examples/go/http/: bindings.wadge.go  bindings.wadge_test.go  http.go  http_test.go  wadge_bindings_test.go
examples/go/http/wit/: app.wit
go/: go.mod  go.sum  west.go  west.h  west_darwin_amd64.go  west_darwin_arm64.go  west_linux_amd64.go  west_linux_arm64.go  west_windows_amd64.go
go/bindings/: bindings.go  west.go
go/bindings/wasi/cli/imports/: imports.wit.go
go/bindings/wasi/cli/stderr/: stderr.wit.go
go/bindings/wasi/cli/stdin/: stdin.wit.go
go/bindings/wasi/cli/stdout/: stdout.wit.go
go/bindings/wasi/cli/terminal-stderr/: terminal-stderr.wit.go
go/bindings/wasi/cli/terminal-stdin/: terminal-stdin.wit.go
go/bindings/wasi/cli/terminal-stdout/: terminal-stdout.wit.go
go/bindings/wasi/clocks/imports/: imports.wit.go
go/cmd/west-bindgen-go/: main.go
go/internal/tests/sync/: component.wasm  sync.go  sync_test.go  west_bindings_test.go
go/internal/tests/wasi/: wasi.go  wasi_test.go  west_bindings_test.go
include/: west.h
internal/generate/: build.go  build_dev.go  wadge.go  wadge_darwin_amd64.go  wadge_darwin_arm64.go  wadge_linux_amd64.go  wadge_linux_arm64.go  wadge_linux_riscv64.go  wadge_windows_amd64.go  west.go  west_android_arm64.go  west_windows_arm64.go
lib/: passthrough.wasm
src/: lib.rs
tests/components/sync/: Cargo.toml
tests/components/sync/src/: lib.rs
tests/components/wasi/: Cargo.toml
tests/components/wasi/src/: lib.rs
tests/components/wasi/wit/: harness.wit
tests/go/sync/: bindings.wadge.go  bindings.wadge_test.go  sync.go  sync_test.go  wadge_bindings_test.go
tests/go/wasi/: bindings.wadge.go  bindings.wadge_test.go  wadge_bindings_test.go  wasi.go  wasi_test.go
tests/go/wasi/wit/: app.wit  deps.toml
tests/wit/fib/: fib.wit
tests/wit/leftpad/: leftpad.wit
tests/wit/sync/: sync.wit
wadgehttp/: http.go
westhttp/: http.go
wit/: deps.toml  wadge.wit  west.wit
(+164 files in other folders)
