[package]
name = "west"
version = "0.1.0-alpha.2"
description = "WebAssembly component test runtime"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace]
members = ["crates/*", "tests/components/*"]

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/rvolosatovs/west"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/rvolosatovs/west"

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
wasi-preview1-component-adapter-provider = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true, features = ["cranelift"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wit-component = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
cbindgen = { version = "0.27", default-features = false }
http = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
wasi-preview1-component-adapter-provider = { version = "24", default-features = false }
wasmparser = { version = "0.217", default-features = false }
wasmtime = { version = "24", default-features = false }
wasmtime-wasi = { version = "24", default-features = false }
wasmtime-wasi-http = { version = "24", default-features = false }
west-passthrough = { version = "0.1.0-alpha.1", path = "./crates/passthrough" }
west = { version = "0.1.0-alpha.2", path = "." }
wit-bindgen = { version = "0.32", default-features = false }
wit-component = { version = "0.217", default-features = false }
