[package]
name = "west"
version = "0.2.1"
description = "WebAssembly component test runtime"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

exclude = [
    "*.a",
    "*.go",
    "*.h",
    "*.s",
    "*.wasm",
    ".github",
    ".gitignore",
    "examples",
    "flake.*",
    "go.*",
    "rust-toolchain.toml",
    "tests",
]

[workspace]
members = ["crates/*", "tests/components/*"]

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/wasmCloud/west"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wasmCloud/west"

[profile.release.package.west-passthrough]
opt-level = 's'
strip = true

[profile.release.package.west-sys]
opt-level = 's'
strip = true

[profile.release]
lto = true

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasi-preview1-component-adapter-provider = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true, features = [
    "addr2line",
    "component-model",
    "coredump",
    "cranelift",
    "demangle",
    "gc",
    "parallel-compilation",
    "runtime",
    "wat",
] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wasmtime-wasi-keyvalue = { workspace = true }
wasmtime-wasi-runtime-config = { workspace = true }
wit-component = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
cbindgen = { version = "0.27", default-features = false }
http = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
wasi-passthrough = { version = "0.3.2", default-features = false }
wasi-passthrough-ext = { version = "0.1.4", default-features = false }
wasi-passthrough-keyvalue = { version = "0.1.1", default-features = false }
wasi-passthrough-logging = { version = "0.1.1", default-features = false }
wasi-preview1-component-adapter-provider = { version = "25", default-features = false }
wasmparser = { version = "0.217", default-features = false }
wasmtime = { version = "25", default-features = false }
wasmtime-cabish = { version = "0.2", default-features = false }
wasmtime-wasi = { version = "25", default-features = false }
wasmtime-wasi-http = { version = "25", default-features = false }
wasmtime-wasi-keyvalue = { version = "25", default-features = false }
wasmtime-wasi-runtime-config = { version = "25", default-features = false }
west = { version = "0.2", path = "." }
wit-bindgen = { version = "0.32", default-features = false }
wit-component = { version = "0.217", default-features = false }
