[workspace]
members = ["crates/*", "tests/components/*"]
resolver = "2"

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/wasmCloud/wadge"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wasmCloud/wadge"

[profile.release.package.wadge-passthrough]
opt-level = 's'
strip = true

[profile.release.package.wadge-sys]
opt-level = 's'
strip = true

[profile.release]
lto = true

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
cbindgen = { version = "0.27", default-features = false }
http = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
wadge = { version = "0.5", path = "./crates/wadge" }
wasi-passthrough = { version = "0.4", default-features = false }
wasi-passthrough-ext = { version = "0.2", default-features = false }
wasi-passthrough-keyvalue = { version = "0.2", default-features = false }
wasi-passthrough-logging = { version = "0.2.1", default-features = false }
wasi-preview1-component-adapter-provider = { version = "32", default-features = false }
wasmparser = { version = "0.240", default-features = false }
wasmtime = { version = "32", default-features = false }
wasmtime-cabish = { version = "0.3", default-features = false }
wasmtime-wasi = { version = "32", default-features = false }
wasmtime-wasi-http = { version = "38", default-features = false }
wasmtime-wasi-keyvalue = { version = "32", default-features = false }
wit-bindgen = { version = "0.42", default-features = false }
wit-component = { version = "0.217", default-features = false }
