[package]
name = "generate-header"
version = "0.1.0"
publish = false

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
cbindgen = { workspace = true }
