[package]
name = "west-passthrough"
version = "0.1.0"
publish = false

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wit-bindgen = { workspace = true, features = ["realloc", "macros"] }
