[package]
name = "west-passthrough"
version = "0.1.0"
description = "WebAssembly component, which reexports WASI from the host"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi-passthrough = { workspace = true }
