[package]
name = "west-sys"
version = "0.1.4"
description = "WebAssembly component test runtime C bindings"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt"] }
wasmtime = { workspace = true }
wasmtime-cabish = { workspace = true }
wasmtime-wasi = { workspace = true }
west = { workspace = true }
