[package]
name = "wadge-passthrough"
version = "0.2.0"
description = "WebAssembly component, which reexports WASI from the host"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
wasi-passthrough = { workspace = true }
wasi-passthrough-ext = { workspace = true }
wasi-passthrough-keyvalue = { workspace = true }
wasi-passthrough-logging = { workspace = true }
