[package]
name = "wadge-sys"
version = "0.4.0"
description = "WebAssembly bridge for native code"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt"] }
wadge = { workspace = true }
wasmtime = { workspace = true }
wasmtime-cabish = { workspace = true }
wasmtime-wasi = { workspace = true }
