[package]
name = "wasi-test-component"
version = "0.1.0"
publish = false

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
west-passthrough = { workspace = true }
wit-bindgen = { workspace = true, features = ["realloc", "macros"] }
